*** TreatJS 1.3.0 (PoC)

* New Lax/Pick/Indy like blame semantics

*** TreatJS 1.2.18 (PoC)

* New TreatJS output
* New exception pass-through
* New call flag

*** TreatJS 1.2.17 (PoC)

* Runtime optimization on Callback Structure
* New flexibel predicate decompilation
* New TreatJS Debugger

*** TreatJS 1.2.16 (PoC)

* Runtime optimization