@@ -359,35 +359,6 @@
     return "(" + this.trap + " @ " + this.sub.toString() + ")";
   };
 
-  // TODO, experimental code
-  //   _   _       _               _   _          
-  //  /_\ | |__ __| |_ _ _ __ _ __| |_(_)___ _ _  
-  // / _ \| '_ (_-<  _| '_/ _` / _|  _| / _ \ ' \ 
-  ///_/ \_\_.__/__/\__|_| \__,_\__|\__|_\___/_||_|                                            
-
-  /*
-     function ContractAbstraction(vars, sub) {
-     if(!(this instanceof ContractAbstraction)) return new ContractAbstraction(vars, sub);
-
-     if(!(variable instanceof Variable)) error("Wrong Contract", (new Error()).fileName, (new Error()).lineNumber);
-     if(!(sub instanceof Contract)) error("Wrong Contract", (new Error()).fileName, (new Error()).lineNumber);
-
-     Object.defineProperties(this, {
-     "variable": {
-     value: variable
-     },
-     "sub": {
-     value: sub
-     }
-     });
-
-     }
-     ContractAbstraction.prototype = Object.create(Contract.prototype);
-     ContractAbstraction.prototype.toString = function() {
-     return "(" + varibale.toString() + "." + sub.toString() + ")";
-     };
-     */
-
   //         _               _ 
   // _____ _| |_ ___ _ _  __| |
   /// -_) \ /  _/ -_) ' \/ _` |
