@@ -1,3 +1,10 @@
+*** TreatJS x.x.x
+
+* New Contract Constructor
+* New Contract Abstraction
+* New Simple Dependenct Contract
+* New Abvanced Dependenct Contract
+
 *** TreatJS 1.3.0 (PoC)
 
 * New Lax/Pick/Indy like blame semantics
